Big refactoring of code.