@@ -1,24 +1,22 @@
 package ru.oldzoomer.nodehistj_download_nodelists.util;
 
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
-import java.time.Year;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
-
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Profile;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.scheduling.annotation.EnableScheduling;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
-
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import ru.oldzoomer.minio.utils.MinioUtils;
 import ru.oldzoomer.nodehistj_download_nodelists.exception.NodelistUpdateException;
+
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.time.Year;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 /**
  * Service for downloading and updating nodelist files from FTP server.
@@ -58,7 +56,7 @@ public class UpdateNodelists {
 
     private final int currentYear = Year.now().getValue();
 
-    private List<String> downloadedFiles = new ArrayList<>();
+    private final List<String> downloadedFiles = new ArrayList<>();
 
     /**
      * Main method for updating nodelist files.
@@ -104,7 +102,7 @@ public class UpdateNodelists {
                 .filter(file -> file.matches(".*/nodelist\\.\\d{3}"))
                 .filter(file -> !minioUtils.isObjectExist(bucket, normalizeObjectName(file)))
                 .peek(file -> log.debug("Processing new file: {}", file))
-                .collect(Collectors.toList());
+                .toList();
 
         log.info("Found {} new files for year {}", newFiles.size(), year);
 
